2000-01-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't look for the sunmath library.
	Don't check for infinity or quiet_nan.

	* emacs/octave-mod.el (octave-mode-syntax-table):
	Undo previous change, but add a comment explaining why.

	* install-octave.in: Exit on any error instead of continuing.
	Install Octave binary last.

2000-01-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-mode-syntax-table):
	Make `%' a comment start character too.

2000-01-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for strptime and localtime_r.

1999-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (XTRA_CXXFLAGS, XTRA_CFLAGS): Use -mminimal-toc on
	AIX systems.

1999-10-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/README: New file.
	* emacs/Makefile.in (DISTFILES, BINDISTFILES): Add it to the lists.

	* emacs/Makefile.in: Don't distribute .elc files.

1999-10-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for select and poll.  Also check for poll.h
	and sys/poll.h.

1999-10-19  Geoff Jacobsen <geoffj@casquet.inet.net.nz>

	* autogen.sh: New file.

1999-10-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in: Use `$(MAKE) -C dir' instead of `cd dir; $(MAKE)'.

Mon Sep 20 11:02:29 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-inf.el, emacs/octave-mod.el: Update to match FSF
	sources plus code that will make it work if Emacs doesn't have the
	customize code.

Tue Sep 14 07:57:06 1999  Kurt Hornik <hornik@ci.tuwien.ac.at>

	* emacs/octave-inf.el (inferior-octave-startup): Always pass "-i"
	and "--no-line-editing" to Octave subprocess.
 	(inferior-octave-startup-args): Default to nil.

Mon Sep  6 10:50:10 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-inf.el (inferior-octave-startup-args):
	Add --no-line-editing to the list.

Fri Jul  9 09:15:24 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>
