@@ -84,40 +84,6 @@ private:
   tree_while_command& operator = (const tree_while_command&);
 };
 
-// Do-While.
-
-class
-tree_do_while_command : public tree_while_command
-{
-public:
-
-  tree_do_while_command (int l = -1, int c = -1)
-    : tree_while_command (l, c) { }
-
-  tree_do_while_command (tree_expression *e, int l = -1, int c = -1)
-    : tree_while_command (e, l, c) { }
-
-  tree_do_while_command (tree_expression *e, tree_statement_list *lst,
-		      int l = -1, int c = -1)
-    : tree_while_command (e, lst, l, c) { }
-
-  ~tree_do_while_command (void) { }
-
-  void eval (void);
-
-  void eval_error (void);
-
-  void accept (tree_walker& tw);
-
-private:
-
-  // No copying!
-
-  tree_do_while_command (const tree_do_while_command&);
-
-  tree_do_while_command& operator = (const tree_do_while_command&);
-};
-
 // Do-Until.
 
 class
