@@ -68,7 +68,6 @@ class tree_try_catch_command;
 class tree_unwind_protect_command;
 class tree_while_command;
 class tree_do_until_command;
-class tree_do_while_command;
 
 class
 tree_walker
@@ -206,9 +205,6 @@ public:
 
   virtual void
   visit_while_command (tree_while_command&) = 0;
-
-  virtual void
-  visit_do_while_command (tree_do_while_command&) = 0;
 
   virtual void
   visit_do_until_command (tree_do_until_command&) = 0;
